tests/type-check/bad/test-raises.arr
fun func() -> Number:
  0
where:
  func() raises 1
end